Removed PermGen JVM setting from run scripts, not used in JDK8